<resources>
    <string name="app_name">Rutinas</string>
    <string name="configurar_alarma">Configurar alarma</string>
    <string name="duracion_de_la_alarma">Duración de la alarma:</string>
    <string name="cantidad_de_repeticiones">Cantidad de repeticiones:</string>
    <string name="read_notifications">Leer notificaciones</string>
    <string name="delay_time">Delay</string>
    <string name="excluded_packages_hint">aaaa\n</string>
    <string name="preview">Preview</string>
    <string name="save">Guardar</string>
    <string name="brightness_adjustment">Ajustar brillo</string>
    <string name="announcement_message">Watcha\' sayin\'</string>
    <string name="volume">Volumen</string>
    <string name="silent">Silencio</string>
    <string name="vibration">Vibración</string>
    <string name="normal">Normal</string>
    <string name="sound_mode_selection">Elegir perfil de sonido</string>
    <string name="media_volume">Volumen multimedia</string>
    <string name="alarm_volume">Volumen de alarma</string>
    <string name="ringtone_volume">Volumen de tono</string>
    <string name="drag_handle_desc">botón para draggear</string>
</resources>