<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Título para la selección del modo -->
    <TextView
        android:id="@+id/tvSoundModeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sound_mode_selection"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RadioGroup para elegir entre "Silencio", "Vibración" y "Normal" -->
    <RadioGroup
        android:id="@+id/radioGroupMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSoundModeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioSilent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silent" />

        <RadioButton
            android:id="@+id/radioVibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibration" />

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />
    </RadioGroup>

    <!-- Botón para guardar -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/radioGroupMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>